--- a/principal/templates/profile_details.html
+++ b/principal/templates/profile_details.html
@@ -47,7 +47,7 @@
                         </div>
                         <!--/col-->
                         <div class="col-xs-12 col-sm-4">
-                            <h2><strong><i class="fa fa-globe"></i> {{ traveller.trip_set.all.count }}</strong></h2>
+                            <h2><strong><i class="fa fa-globe"></i> {{ trips|length }}</strong></h2>
                             <p><small>Trips</small></p>
                             {% if traveller.id == user.traveller.id %}
                                 <a href="/trip/mylist/" class="btn btn-info btn-block"><span class="fa fa-plus-circle"></span> My Trips </a>
