--- a/principal/templates/base.html
+++ b/principal/templates/base.html
@@ -1,94 +1,49 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>BrainTravel</title>
-    <meta charset="ISO-8859-1">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    {% load staticfiles %}
-    {% load i18n %}
-    <link rel="stylesheet" href="{% static "css/bootstrap.min.css" %}">
-    <link rel="stylesheet" href="{% static "css/custom.css" %}">
-    <link rel="stylesheet" href="{% static "css/animate.css" %}">
-    <link rel="stylesheet" href="{% static "css/sweet-alert.css" %}">
-    <link rel="stylesheet" href="{% static "css/font-awesome.min.css" %}">
-    <!-- Jquery -->
-    <script src="{% static "js/jquery-1.11.0.min.js" %}"></script>
-    <!-- Boostrap -->
-    <script src="{% static "js/bootstrap.min.js" %}"></script>
-    <!-- Dependencies JS -->
-    <script src="{% static "js/sweet-alert.min.js" %}"></script>
-    <script src="{% static "js/countUp.min.js" %}"></script>
-    <script src="{% static "js/main.js" %}"></script>
-    <script src="{% static "js/validator.js" %}"></script>
-    {% block extrahead %} {% endblock %}
+<title>BrainTravel</title>
+<meta charset="ISO-8859-1">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+{% load staticfiles %} {% load i18n %}
+<link rel="stylesheet" href="{% static "css/bootstrap.min.css" %}">
+<link rel="stylesheet" href="{% static "css/custom.css" %}">
+<link rel="stylesheet" href="{% static "css/animate.css" %}">
+<link rel="stylesheet" href="{% static "css/sweet-alert.css" %}">
+<link rel="stylesheet" href="{% static "css/font-awesome.min.css" %}">
+<!-- Jquery -->
+<script src="{% static "js/jquery-1.11.0.min.js" %}"></script>
+<!-- Boostrap -->
+<script src="{% static "js/bootstrap.min.js" %}"></script>
+<!-- Dependencies JS -->
+<script src="{% static "js/sweet-alert.min.js" %}"></script>
+<script src="{% static "js/countUp.min.js" %}"></script>
+<script src="{% static "js/main.js" %}"></script>
+<script src="{% static "js/validator.js" %}"></script>
+{% block extrahead %} {% endblock %}
 </head>
 <body>
-    <nav class="navbar navbar-default navbar-bt">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menu-navbar">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="/">BrainTravel</a>
-            </div>
-            
-            <div class="collapse navbar-collapse" id="menu-navbar">
-                <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <a href="/search" class="animate"><span class="fa fa-search"></span></a>
-                    </li>
-                   <!--  <li style="text-decoration: None">
-                        <a id="sign_ind_nav" href="/auth_request">Login FS</a>
-                    </li> -->
-                    {% if user.is_anonymous %}
-                        {% include "menu/anonymous-menu.html" %}
-                    
-                    {% else %}
-                        {% if perms.principal.traveller %}
-                            <li style="text-decoration: None">
-                                <a id="sign_ind_nav" href="/planner/list_venues/">Planner</a>
-                            </li>
-{#                            <li style="text-decoration: None">#}
-{#                                <a id="sign_ind_nav" href="/Coin/list">List history coins</a>#}
-{#                            </li>#}
 
+	{% include "miscellaneous/menu.html" %}
 
-                            {% include "menu/traveller-menu.html" %}
-                        {% else %}
-                            {% include "menu/admin-menu.html" %}
-                        {% endif %}
+	<div class="container">{% block content %} {% endblock %}</div>
 
-                    {% endif %}
-                    
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container-fluid -->  
-        
-              
-    </nav>
+    {% include "miscellaneous/footer.html" %}
 
-    <div class="container">{% block content %} {% endblock %}</div>
-
-    {% if messages %}
-        {% trans "Accept" as confirm_button %}
-        {% for message in messages %}
-            <script type="text/javascript">
-                $(function () {
-                    swal({
-                        title: '{{ message.tags }}',
-                        text: '{{ message}}',
-                        type: '{{ message.tags }}',
-                        confirmButtonText: '{{confirm_button}}'
-                    });
-                });
-            </script>
-        {% endfor %}
-    {% endif %}
+	{% if messages %} 
+	{% trans "Accept" as confirm_button %} 
+	{% for message in messages %}
+	<script type="text/javascript">
+		$(function() {
+			swal({
+				title : '{{ message.tags }}',
+				text : '{{ message}}',
+				type : '{{ message.tags }}',
+				confirmButtonText : '{{confirm_button}}'
+			});
+		});
+	</script>
+	{% endfor %} 
+	{% endif %}
 </body>
 
 </html>
