--- a/principal/templates/base.html
+++ b/principal/templates/base.html
@@ -27,7 +27,7 @@
 
 	<div class="container">{% block content %} {% endblock %}</div>
 
-    {% include "miscellaneous/footer.html" %}
+    <div id="footer">{% include "miscellaneous/footer.html" %}</div>
 
 	{% if messages %} 
 	{% trans "Accept" as confirm_button %} 
