--- a/principal/templates/miscellaneous/traveller-menu.html
+++ b/principal/templates/miscellaneous/traveller-menu.html
@@ -21,6 +21,10 @@
     <a id="sign_ind_nav" href="/coin/list">List history coins</a>
 </li>
 
+<li>
+    <a id="sign_ind_nav" href="/payment">My payments</a>
+</li>
+
 <!-- <li style="text-decoration: None; margin-right: 5px">
 {#    <a id="sign_ind_nav" href="/profile/{{ user.traveller.id }}">#}
 {#        <img class="avatar img-circle img-thumbnail" src="/static/user_folder/{{ user.traveller.photo }}" onerror="this.src='/static/user_folder/default.jpg'" width="45" alt="User progile">#}
