--- a/principal/templates/base.html
+++ b/principal/templates/base.html
@@ -1,49 +1,107 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>BrainTravel</title>
-<meta charset="ISO-8859-1">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-{% load staticfiles %} {% load i18n %}
-<link rel="stylesheet" href="{% static "css/bootstrap.min.css" %}">
-<link rel="stylesheet" href="{% static "css/custom.css" %}">
-<link rel="stylesheet" href="{% static "css/animate.css" %}">
-<link rel="stylesheet" href="{% static "css/sweet-alert.css" %}">
-<link rel="stylesheet" href="{% static "css/font-awesome.min.css" %}">
-<!-- Jquery -->
-<script src="{% static "js/jquery-1.11.0.min.js" %}"></script>
-<!-- Boostrap -->
-<script src="{% static "js/bootstrap.min.js" %}"></script>
-<!-- Dependencies JS -->
-<script src="{% static "js/sweet-alert.min.js" %}"></script>
-<script src="{% static "js/countUp.min.js" %}"></script>
-<script src="{% static "js/main.js" %}"></script>
-<script src="{% static "js/validator.js" %}"></script>
-{% block extrahead %} {% endblock %}
+    <title>BrainTravel</title>
+    <meta charset="ISO-8859-1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    {% load staticfiles %}
+    {% load i18n %}
+    <link rel="stylesheet" href="{% static "css/bootstrap.min.css" %}">
+    <link rel="stylesheet" href="{% static "css/custom.css" %}">
+    <link rel="stylesheet" href="{% static "css/animate.css" %}">
+    <link rel="stylesheet" href="{% static "css/sweet-alert.css" %}">
+    <link rel="stylesheet" href="{% static "css/font-awesome.min.css" %}">
+    <!-- Jquery -->
+    <script src="{% static "js/jquery-1.11.0.min.js" %}"></script>
+    <!-- Boostrap -->
+    <script src="{% static "js/bootstrap.min.js" %}"></script>
+    <!-- Dependencies JS -->
+    <script src="{% static "js/sweet-alert.min.js" %}"></script>
+    <script src="{% static "js/countUp.min.js" %}"></script>
+    <script src="{% static "js/main.js" %}"></script>
+    <script src="{% static "js/validator.js" %}"></script>
+    {% block extrahead %} {% endblock %}
 </head>
 <body>
+<div class="navbar navbar-default navbar-static-top navbar-mfx-gen navbar-fixed-top" role="navigation">
+    <div class="container bg-menu-collapse">
+    <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="/">BrainTravel</a>
+    </div>
+    <div class="navbar-collapse collapse" id="supMenu">
+        <ul class="nav navbar-nav navbar-right" style="background:#FFF;color:#000;">
 
-	{% include "miscellaneous/menu.html" %}
+{#            <li><a href="/index#howitworks" class="menu">Como funciona</a></li>#}
+{#            <li class="visible-lg visible-md"><a href="/index#advantages" class="menu">Ventajas</a></li>#}
+{#            <li class="visible-lg visible-md"><a href="/index#opinions" class="menu">Opiniones</a></li>#}
+{#            <li><a href="#" id="signin-button" data-toggle="modal" data-target="#signin-modal">Registrate</a></li>#}
+{#            <li class="nav-divider"></li>#}
+{#            <li><a href="/login">Iniciar Sesion</a></li>#}
+{#            <li class="nav-divider"></li>#}
+{#            <li><a href="#" id="signin-button" data-toggle="modal" data-target="#signin-modal">AutoDiagnosis</a></li>#}
+{#            <li><a class="menu" href="/help/main">Ayuda</a></li>#}
+            <li>
+                <a href="/search" class="animate"><span class="fa fa-search"></span></a></li>
+        </ul>
+    </div>
+    </div>
+</div>
+{#    <nav class="navbar navbar-default navbar-bt">#}
+{#        <div class="container-fluid">#}
+{#            <div class="navbar-header">#}
+{#                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menu-navbar">#}
+{#                    <span class="sr-only">Toggle navigation</span>#}
+{#                    <span class="icon-bar"></span>#}
+{#                    <span class="icon-bar"></span>#}
+{#                    <span class="icon-bar"></span>#}
+{#                </button>#}
+{#                <a class="navbar-brand" href="/">BrainTravel</a>#}
+{#            </div>#}
+{#            <div class="collapse navbar-collapse" id="menu-navbar">#}
+{#                <ul class="nav navbar-nav navbar-right">#}
+{#                    <li>#}
+{#                        <a href="/search" class="animate"><span class="fa fa-search"></span></a>#}
+{#                    </li>#}
+{#                    {% if user.is_anonymous %}#}
+{#                        {% include "menu/anonymous-menu.html" %}#}
+{#                    {% else %}#}
+{#                        {% if perms.principal.traveller %}#}
+{#                            {% include "menu/traveller-menu.html" %}#}
+{#                        {% else %}#}
+{#                            {% include "menu/admin-menu.html" %}#}
+{#                        {% endif %}#}
+{#                    {% endif %}#}
+{#                    #}
+{#                </ul>#}
+{#            </div>#}
+{#            <!-- /.navbar-collapse -->#}
+{#        </div>#}
+{#        <!-- /.container-fluid -->  #}
+{#    </nav>#}
 
-	<div class="container">{% block content %} {% endblock %}</div>
+    <div class="container">{% block content %} {% endblock %}</div>
 
-    <div id="footer">{% include "miscellaneous/footer.html" %}</div>
-
-	{% if messages %} 
-	{% trans "Accept" as confirm_button %} 
-	{% for message in messages %}
-	<script type="text/javascript">
-		$(function() {
-			swal({
-				title : '{{ message.tags }}',
-				text : '{{ message}}',
-				type : '{{ message.tags }}',
-				confirmButtonText : '{{confirm_button}}'
-			});
-		});
-	</script>
-	{% endfor %} 
-	{% endif %}
+    {% if messages %}
+        {% trans "Accept" as confirm_button %}
+        {% for message in messages %}
+            <script type="text/javascript">
+                $(function () {
+                    swal({
+                        title: '{{ message.tags }}',
+                        text: '{{ message}}',
+                        type: '{{ message.tags }}',
+                        confirmButtonText: '{{confirm_button}}'
+                    });
+                });
+            </script>
+        {% endfor %}
+    {% endif %}
 </body>
 
 </html>
