--- a/principal/templates/index.html
+++ b/principal/templates/index.html
@@ -10,10 +10,12 @@
 <title>BrainTravel</title> {% load staticfiles %} {% load i18n %}
 <!-- Bootstrap Core CSS -->
 <link rel="stylesheet" href="{% static "css/bootstrap.min.css" %}">
+<link rel="stylesheet" href="{% static "css/custom.css" %}">
 <link rel="stylesheet" href="{% static "css/home/stylish-portfolio.css" %}">
 <link rel="stylesheet" href="{% static "css/home/morphext.css" %}">
 <link rel="stylesheet" href="{% static "css/home/stylish-portfolio.css" %}">
 <link rel="stylesheet" href="{% static "css/animate.css" %}">
+
 
 <!-- Custom Fonts -->
 <link href="{% static "css/font-awesome.min.css" %}" rel="stylesheet" type="text/css">
