--- a/principal/templates/miscellaneous/traveller-menu.html
+++ b/principal/templates/miscellaneous/traveller-menu.html
@@ -21,15 +21,16 @@
     <a id="sign_ind_nav" href="/coin/list">List history coins</a>
 </li>
 
-<!-- <li style="text-decoration: None; margin-right: 5px">
-{#    <a id="sign_ind_nav" href="/profile/{{ user.traveller.id }}">#}
-{#        <img class="avatar img-circle img-thumbnail" src="/static/user_folder/{{ user.traveller.photo }}" onerror="this.src='/static/user_folder/default.jpg'" width="45" alt="User progile">#}
-    </a>
-</li> -->
+<li>
+    <a id="sign_ind_nav" href="/planner/list_venues/">Planner</a>
+</li>
 
-<li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown"> <span class="glyphicon glyphicon-user"></span>
-		<strong>{{ user.traveller.first_name }}</strong> <span class="glyphicon glyphicon-chevron-down"></span>
-</a>
+<li class="dropdown">
+    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+        <span class="glyphicon glyphicon-user"></span>
+		<strong>{{ user.traveller.first_name }}</strong>
+        <span class="glyphicon glyphicon-chevron-down"></span>
+    </a>
 	<ul class="dropdown-menu">
 		<li>
 			<div class="navbar-login">
@@ -61,4 +62,5 @@
 				</div>
 			</div>
 		</li>
-	</ul></li>
+	</ul>
+</li>
