--- a/principal/templates/trip_edit.html
+++ b/principal/templates/trip_edit.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% block extrahead %} {{form.media}} {% endblock %}
 {% block content %}
     {% load i18n %}
     <div class="container">
