--- a/principal/templates/base.html
+++ b/principal/templates/base.html
@@ -23,67 +23,9 @@
     {% block extrahead %} {% endblock %}
 </head>
 <body>
-<div class="navbar navbar-default navbar-static-top navbar-mfx-gen navbar-fixed-top" role="navigation">
-    <div class="container bg-menu-collapse">
-    <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="/">BrainTravel</a>
-    </div>
-    <div class="navbar-collapse collapse" id="supMenu">
-        <ul class="nav navbar-nav navbar-right" style="background:#FFF;color:#000;">
 
-{#            <li><a href="/index#howitworks" class="menu">Como funciona</a></li>#}
-{#            <li class="visible-lg visible-md"><a href="/index#advantages" class="menu">Ventajas</a></li>#}
-{#            <li class="visible-lg visible-md"><a href="/index#opinions" class="menu">Opiniones</a></li>#}
-{#            <li><a href="#" id="signin-button" data-toggle="modal" data-target="#signin-modal">Registrate</a></li>#}
-{#            <li class="nav-divider"></li>#}
-{#            <li><a href="/login">Iniciar Sesion</a></li>#}
-{#            <li class="nav-divider"></li>#}
-{#            <li><a href="#" id="signin-button" data-toggle="modal" data-target="#signin-modal">AutoDiagnosis</a></li>#}
-{#            <li><a class="menu" href="/help/main">Ayuda</a></li>#}
-            <li>
-                <a href="/search" class="animate"><span class="fa fa-search"></span></a></li>
-        </ul>
-    </div>
-    </div>
-</div>
-{#    <nav class="navbar navbar-default navbar-bt">#}
-{#        <div class="container-fluid">#}
-{#            <div class="navbar-header">#}
-{#                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menu-navbar">#}
-{#                    <span class="sr-only">Toggle navigation</span>#}
-{#                    <span class="icon-bar"></span>#}
-{#                    <span class="icon-bar"></span>#}
-{#                    <span class="icon-bar"></span>#}
-{#                </button>#}
-{#                <a class="navbar-brand" href="/">BrainTravel</a>#}
-{#            </div>#}
-{#            <div class="collapse navbar-collapse" id="menu-navbar">#}
-{#                <ul class="nav navbar-nav navbar-right">#}
-{#                    <li>#}
-{#                        <a href="/search" class="animate"><span class="fa fa-search"></span></a>#}
-{#                    </li>#}
-{#                    {% if user.is_anonymous %}#}
-{#                        {% include "menu/anonymous-menu.html" %}#}
-{#                    {% else %}#}
-{#                        {% if perms.principal.traveller %}#}
-{#                            {% include "menu/traveller-menu.html" %}#}
-{#                        {% else %}#}
-{#                            {% include "menu/admin-menu.html" %}#}
-{#                        {% endif %}#}
-{#                    {% endif %}#}
-{#                    #}
-{#                </ul>#}
-{#            </div>#}
-{#            <!-- /.navbar-collapse -->#}
-{#        </div>#}
-{#        <!-- /.container-fluid -->  #}
-{#    </nav>#}
+    <!-- Navigation -->
+	{% include "miscellaneous/menu.html" %}
 
     <div class="container">{% block content %} {% endblock %}</div>
 
