--- a/principal/templates/miscellaneous/menu.html
+++ b/principal/templates/miscellaneous/menu.html
@@ -1,4 +1,4 @@
-<div class="navbar navbar-default navbar-static-top navbar-mfx-gen navbar-fixed-top" role="navigation">
+<div class="navbar navbar-default navbar-static-top navbar-mfx-gen" role="navigation">
     <div class="container bg-menu-collapse">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
