--- a/principal/templates/index.html
+++ b/principal/templates/index.html
@@ -10,6 +10,7 @@
 <title>BrainTravel</title> {% load staticfiles %} {% load i18n %}
 <!-- Bootstrap Core CSS -->
 <link rel="stylesheet" href="{% static "css/bootstrap.min.css" %}">
+<link rel="stylesheet" href="{% static "css/custom.css" %}">
 <link rel="stylesheet" href="{% static "css/home/stylish-portfolio.css" %}">
 <link rel="stylesheet" href="{% static "css/home/morphext.css" %}">
 <link rel="stylesheet" href="{% static "css/home/stylish-portfolio.css" %}">
@@ -151,9 +152,6 @@
 			href="https://www.google.es/maps/place/Escuela+T%C3%A9cnica+Superior+de+Ingenier%C3%ADa+Inform%C3%A1tica,+Universidad+de+Sevilla,+US+-+Campus+R.+Mercedes,+41012+Sevilla/@37.35838,-5.9880226,17z/data=!4m2!3m1!1s0xd126dd495901fd9:0x29b0826b33040abb?hl=es"></a>
 		</small>
 	</section>
-
-
-    {% include "miscellaneous/footer.html" %}
     
 
 	<!-- Jquery -->
