--- a/principal/templates/miscellaneous/footer.html
+++ b/principal/templates/miscellaneous/footer.html
@@ -1,33 +1,15 @@
 <!-- Footer -->
 {% load staticfiles %}
-<footer>
-	<div class="container">
-		<div class="row">
-			<div class="col-lg-10 col-lg-offset-1 text-center">
+<footer class="footer">
+    <div class="container">
+        <div class="row text-center">
+            <div class="col-xs-12">
 				<h4>
 					<strong>BrainTravel</strong>
 				</h4>
-				<!--<p>3481 Melrose Place<br>Beverly Hills, CA 90210</p>
-                    <ul class="list-unstyled">
-                        <li><i class="fa fa-phone fa-fw"></i> (123) 456-7890</li>
-                        <li><i class="fa fa-envelope-o fa-fw"></i>  <a href="mailto:name@example.com">name@example.com</a>
-                        </li>
-                    </ul>
-                    <br>
-                    <ul class="list-inline">
-                        <li>
-                            <a href="#"><i class="fa fa-facebook fa-fw fa-3x"></i></a>
-                        </li>
-                        <li>
-                            <a href="#"><i class="fa fa-twitter fa-fw fa-3x"></i></a>
-                        </li>
-                        <li>
-                            <a href="#"><i class="fa fa-dribbble fa-fw fa-3x"></i></a>
-                        </li>
-                    </ul>-->
-				<hr class="small">
+				<hr>
 				<p class="text-muted">Copyright &copy; BrainTravel 2015</p>
-				<img src="{% static "img/powered_fs.png" %}"/>
+				<img src="{% static "img/powered_fs.png" %}" alt="BrainTravel is powered by Foursquare"/>
 			</div>
 		</div>
 	</div>
