--- a/principal/templates/base.html
+++ b/principal/templates/base.html
@@ -26,8 +26,9 @@
 	{% include "miscellaneous/menu.html" %}
 
 	<div class="container">{% block content %} {% endblock %}</div>
-
-    <div id="footer">{% include "miscellaneous/footer.html" %}</div>
+    
+    <div class="clearfix"></div>
+   {% include "miscellaneous/footer.html" %}
 
 	{% if messages %} 
 	{% trans "Accept" as confirm_button %} 
