--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -492,9 +492,25 @@ img {
 	width: 100%;
 	height: auto;
 }
-footer{
-	position: absolute;
-	bottom: 0px;
-	width: 100%;
-	background-color: #F5F5F5;
+
+/* Sticky footer styles
+-------------------------------------------------- */
+html {
+  position: relative;
+  min-height: 100%;
 }
+body {
+  /* Margin bottom by footer height */
+  margin-bottom: 150px;
+}
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 150px;
+  background-color: #f5f5f5;
+}
+
+
+/
