--- a/principal/templates/base.html
+++ b/principal/templates/base.html
@@ -6,11 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     {% load staticfiles %}
     {% load i18n %}
-    <link rel="stylesheet" href="{% static "css/bootstrap.min.css" %}">
+    <link rel="stylesheet" href="{% static "css/bootstrap.css" %}">
     <link rel="stylesheet" href="{% static "css/custom.css" %}">
     <link rel="stylesheet" href="{% static "css/animate.css" %}">
     <link rel="stylesheet" href="{% static "css/sweet-alert.css" %}">
     <link rel="stylesheet" href="{% static "css/font-awesome.min.css" %}">
+    <link rel="stylesheet" href="{% static "css/home/stylish-portfolio.css" %}">
+    <link rel="stylesheet" href="{% static "css/home/morphext.css" %}">
+    <link rel="stylesheet" href="{% static "css/home/stylish-portfolio.css" %}">
     <!-- Jquery -->
     <script src="{% static "js/jquery-1.11.0.min.js" %}"></script>
     <!-- Boostrap -->
@@ -20,6 +23,9 @@
     <script src="{% static "js/countUp.min.js" %}"></script>
     <script src="{% static "js/main.js" %}"></script>
     <script src="{% static "js/validator.js" %}"></script>
+    <!-- Custom Javascript -->
+    <script src="{% static "js/home/morphext.min.js" %}"></script>
+
     {% block extrahead %} {% endblock %}
 </head>
 <body>
@@ -27,7 +33,7 @@
     <!-- Navigation -->
 	{% include "miscellaneous/menu.html" %}
 
-    <div class="container">{% block content %} {% endblock %}</div>
+    {% block content %} {% endblock %}
 
     {% if messages %}
         {% trans "Accept" as confirm_button %}
