--- a/principal/templates/index.html
+++ b/principal/templates/index.html
@@ -1,33 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'base.html' %}
+{% block content %}
 
-<head>
-
-<meta charset="ISO-8859-1">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-
-<title>BrainTravel</title> {% load staticfiles %} {% load i18n %}
-<!-- Bootstrap Core CSS -->
-<link rel="stylesheet" href="{% static "css/bootstrap.min.css" %}">
-<link rel="stylesheet" href="{% static "css/custom.css" %}">
-<link rel="stylesheet" href="{% static "css/home/stylish-portfolio.css" %}">
-<link rel="stylesheet" href="{% static "css/home/morphext.css" %}">
-<link rel="stylesheet" href="{% static "css/home/stylish-portfolio.css" %}">
-<link rel="stylesheet" href="{% static "css/animate.css" %}">
-
-
-<!-- Custom Fonts -->
-<link href="{% static "css/font-awesome.min.css" %}" rel="stylesheet" type="text/css">
-
-</head>
-
-<body>
-
-	<!-- Navigation -->
-	{% include "miscellaneous/menu.html" %}
-
-	<!-- Header -->
+    <!-- Header -->
 	<header id="top" class="header">
 		<div class="text-vertical-center">
 			<h1>BrainTravel</h1>
@@ -37,7 +11,7 @@
 		</div>
 	</header>
 
-	<!-- About -->
+    <!-- About -->
 	<section id="about" class="about">
 		<div class="container">
 			<div class="row">
@@ -147,25 +121,16 @@
 	<!-- Map -->
 	<section id="contact" class="map">
 		<iframe width="100%" height="100%" frameborder="0" marginheight="0"
-			marginwidth="0"
+			marginwidth="0" style="pointer-events: none"
 			src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3171.3294842982477!2d-5.9880225999999865!3d37.35838!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd126dd495901fd9%3A0x29b0826b33040abb!2sEscuela+T%C3%A9cnica+Superior+de+Ingenier%C3%ADa+Inform%C3%A1tica%2C+Universidad+de+Sevilla%2C+US+-+Campus+R.+Mercedes%2C+41012+Sevilla!5e0!3m2!1ses!2ses!4v1425665499040"></iframe>
 		<br /> <small> <a
 			href="https://www.google.es/maps/place/Escuela+T%C3%A9cnica+Superior+de+Ingenier%C3%ADa+Inform%C3%A1tica,+Universidad+de+Sevilla,+US+-+Campus+R.+Mercedes,+41012+Sevilla/@37.35838,-5.9880226,17z/data=!4m2!3m1!1s0xd126dd495901fd9:0x29b0826b33040abb?hl=es"></a>
 		</small>
 	</section>
 
-
     {% include "miscellaneous/footer.html" %}
-    
 
-	<!-- Jquery -->
-	<script src="{% static "js/jquery-1.11.0.min.js" %}"></script>
-	<!-- Boostrap -->
-	<script src="{% static "js/bootstrap.min.js" %}"></script>
-	<!-- Custom Javascript -->
-	<script src="{% static "js/home/morphext.min.js" %}"></script>
-
-	<!-- Custom Theme JavaScript -->
+    <!-- Custom Theme JavaScript -->
 	<script>
 		$("#js-rotating").Morphext({
 			animation : "fadeIn",
@@ -209,6 +174,4 @@
 		});
 	</script>
 
-</body>
-
-</html>
+{%endblock%}
