--- a/principal/templates/miscellaneous/menu.html
+++ b/principal/templates/miscellaneous/menu.html
@@ -1,4 +1,4 @@
-<div class="navbar navbar-default navbar-static-top navbar-mfx-gen" role="navigation">
+<div class="navbar navbar-bt-gen navbar-static-top" role="navigation">
     <div class="container bg-menu-collapse">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -12,7 +12,7 @@
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
                 <li>
-                    <a href="/search" class="animate"><span class="fa fa-search"></span></a>
+                    <a href="/search"><span class="fa fa-search"></span></a>
                 </li>
                 {% if user.is_anonymous %}
                     {% include "miscellaneous/anonymous-menu.html" %}
