--- a/principal/templates/miscellaneous/traveller-menu.html
+++ b/principal/templates/miscellaneous/traveller-menu.html
@@ -6,27 +6,23 @@
 </li>
 
 <li>
-    <a id="sign_ind_nav" href="/trip/mylist">List my trips</a>
-</li>
-
-<li>
-    <a id="sign_ind_nav" href="/trip/planned_trips">List my planned trips</a>
-</li>
-
-<li>
-    <a id="sign_ind_nav" href="/trip/draft">List my trips draft</a>
-</li>
-
-<li>
-    <a id="sign_ind_nav" href="/coin/list">List history coins</a>
-</li>
-
-<li>
     <a id="sign_ind_nav" href="/planner/list_venues/">Planner</a>
 </li>
 
 <li>
     <a id="sign_ind_nav" href="/payment">My payments</a>
+</li>
+
+<li class="dropdown">
+    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+        <span class="fa fa-plane fa-1x"></span>
+        Trips <span class="caret"></span>
+    </a>
+    <ul class="dropdown-menu" role="menu">
+        <li><a id="sign_ind_nav" href="/trip/mylist">My approved trips </a></li>
+        <li><a id="sign_ind_nav" href="/trip/planned_trips">My planned trips</a></li>
+        <li><a id="sign_ind_nav" href="/trip/draft">My draft trips</a></li>
+    </ul>
 </li>
 
 
