--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1,7 +1,7 @@
 /* General */
 
 body {
-    background-color: #EEEEEE;
+    /*background-color: #EEEEEE;*/
 }
 
 hr{
@@ -500,7 +500,7 @@ html {
 }
 body {
   /* Margin bottom by footer height */
-  margin-bottom: 150px;
+    margin-bottom: 150px;
 }
 .footer {
   position: absolute;
@@ -509,4 +509,18 @@ body {
   /* Set the fixed height of the footer here */
   height: 150px;
   background-color: #f5f5f5;
+}
+
+.navbar-bt-gen{
+    background: #fff;
+    border-bottom: #fece08 5px solid;
+    margin-bottom: 0px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+.nav > li > a:hover,
+.nav > li > a:focus {
+  text-decoration: none;
+  background-color: transparent;
 }
