--- a/principal/templates/miscellaneous/anonymous-menu.html
+++ b/principal/templates/miscellaneous/anonymous-menu.html
@@ -1,3 +1,6 @@
 <li>
-    <a id="sign_ind_nav" href="/signin">Sign In</a>
+    <a id="sign_ind_nav" href="/signin">
+        <span class="fa fa-sign-in"></span>
+        <strong>Sign In</strong>
+    </a>
 </li>
