--- a/principal/templates/miscellaneous/menu.html
+++ b/principal/templates/miscellaneous/menu.html
@@ -1,18 +1,21 @@
-<div class="navbar navbar-bt-gen navbar-static-top" role="navigation">
+<div class="navbar navbar-default .navbar-toggle navbar-bt-gen navbar-static-top" role="navigation">
     <div class="container bg-menu-collapse">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/">BrainTravel</a>
+            <a class="navbar-brand" href="/"><strong>BrainTravel</strong></a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
                 <li>
-                    <a href="/search"><span class="fa fa-search"></span></a>
+                    <a href="/search">
+                        <span class="fa fa-search"></span>
+                        <strong>Search</strong>
+                    </a>
                 </li>
                 {% if user.is_anonymous %}
                     {% include "miscellaneous/anonymous-menu.html" %}
