--- a/principal/templates/miscellaneous/traveller-menu.html
+++ b/principal/templates/miscellaneous/traveller-menu.html
@@ -1,24 +1,35 @@
+{#<li>#}
+{#    <a id="sign_ind_nav" href="/auth_request">test FS</a>#}
+{#</li>#}
+
 <li>
-    <a id="sign_ind_nav" href="/auth_request">test FS</a>
-</li>
-<li>
-    <a id="sign_ind_nav" href="/buy_coins">Buy Coins</a>
+    <a id="sign_ind_nav" href="/planner/list_venues/">
+        <span class="fa fa-file-text"></span>
+        <strong>Planner</strong>
+    </a>
 </li>
 
 <li>
-    <a id="sign_ind_nav" href="/planner/list_venues/">Planner</a>
+    <a id="sign_ind_nav" href="/buy_coins">
+        <span class="fa fa-shopping-cart"></span>
+        <strong>Buy coins</strong>
+    </a>
 </li>
 
 <li>
-    <a id="sign_ind_nav" href="/payment">My payments</a>
+    <a id="sign_ind_nav" href="/payment">
+        <span class="fa fa-paypal"></span>
+        <strong>My payments</strong>
+    </a>
 </li>
 
 <li class="dropdown">
-    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
-        <span class="fa fa-plane fa-1x"></span>
-        Trips <span class="caret"></span>
+     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+        <span class="glyphicon glyphicon-plane"></span>
+		<strong>Trips</strong>
+        <span class="glyphicon glyphicon-chevron-down"></span>
     </a>
-    <ul class="dropdown-menu" role="menu">
+    <ul class="dropdown-menu">
         <li><a id="sign_ind_nav" href="/trip/mylist">My approved trips </a></li>
         <li><a id="sign_ind_nav" href="/trip/planned_trips">My planned trips</a></li>
         <li><a id="sign_ind_nav" href="/trip/draft">My draft trips</a></li>
