--- a/principal/templates/search.html
+++ b/principal/templates/search.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% block title %} Search {% endblock %}
 {% block content %}
+<div class="container">
 <div class="row">
 	<div class="col-lg-12">
 		<form action="/search_trip/" method="get">
@@ -48,4 +49,5 @@
   </div>
   <br>
  {% endfor %}
+</div>
 {%endblock%}
