Bug en profile y listado de viajes - Se ha cambiado el atributo que se pasa a la vista al mostrar el perfil, antes se pasaba una lista de viajes y ahora solo el numero. - Se ha cambiado la URI para ver los detalles de un viaje, dos opciones,   planified a false o true.

--- a/principal/templates/trip_list.html
+++ b/principal/templates/trip_list.html
@@ -23,7 +23,12 @@
                         <li>|</li>
                         <span><i class="fa fa-thumbs-o-down"></i> {{trip.dislikes}}</span>
                         <li>|</li>
-                        <li><a href="/public_trip_details/{{trip.scorable_ptr_id}}"><i class="fa fa-info-circle"></i> View more</a></li>
+                        {% if trip.planified %}
+                            <li><a href="/show_planning/{{trip.scorable_ptr_id}}"><i class="fa fa-info-circle"></i> View more</a></li>
+                        {% else %}
+                            <li><a href="/public_trip_details/{{trip.scorable_ptr_id}}"><i class="fa fa-info-circle"></i> View more</a></li>
+                        {% endif %}
+
                     </ul>
                 </div>
             </div>
