--- a/principal/templates/miscellaneous/footer.html
+++ b/principal/templates/miscellaneous/footer.html
@@ -4,10 +4,11 @@
     <div class="container">
         <div class="row text-center">
             <div class="col-xs-12">
-				<h4>
-					<strong>BrainTravel</strong>
-				</h4>
-				<hr>
+{#				<h4>#}
+{#					<strong>BrainTravel</strong>#}
+{#				</h4>#}
+				<br/>
+                <br/>
 				<p class="text-muted">Copyright &copy; BrainTravel 2015</p>
 				<img src="{% static "img/powered_fs.png" %}" alt="BrainTravel is powered by Foursquare"/>
 			</div>
