--- a/static/css/home/stylish-portfolio.css
+++ b/static/css/home/stylish-portfolio.css
@@ -6,12 +6,6 @@
 
 /* Global Styles */
 
-html,
-body {
-    width: 100%;
-    height: 100%;
-}
-
 body {
     font-family: "Source Sans Pro","Helvetica Neue",Helvetica,Arial,sans-serif;
 }
@@ -154,24 +148,27 @@ hr.small {
     display: table;
     position: relative;
     width: 100%;
-    height: 100%;
+    min-height: 750px;
     background: url(../../img/home/bg.jpg) no-repeat center center scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
     -o-background-size: cover;
     margin-top: -25px;
+    border-bottom: #fece08 5px solid;
 }
 
 /* About */
 
 .about {
     padding: 50px 0;
+    border-bottom: #fece08 5px solid;
 }
 
 /* Services */
 
 .services {
+    border-bottom: #fece08 5px solid;
     padding: 50px 0;
 }
 
@@ -182,6 +179,7 @@ hr.small {
 /* Callout */
 
 .callout {
+    border-bottom: #fece08 5px solid;
     display: table;
     width: 100%;
     height: 400px;
@@ -219,22 +217,4 @@ hr.small {
 
 .call-to-action .btn {
     margin: 10px;
-}
-
-/* Map */
-
-.map {
-    height: 500px;
-}
-
-@media(max-width:768px) {
-    .map {
-        height: 75%;
-    }
-}
-
-/* Footer */
-
-footer {
-    padding: 100px 0;
 }
