--- a/principal/templates/base.html
+++ b/principal/templates/base.html
@@ -20,6 +20,7 @@
     <!-- Boostrap -->
     <script src="{% static "js/bootstrap.min.js" %}"></script>
     <!-- Dependencies JS -->
+    <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyB2Ejc7OmM9YxiWGvUqBrx3sKPKedF-IA8&sensor=false"></script>
     <script src="https://api.tiles.mapbox.com/mapbox.js/v2.1.6/mapbox.js"></script>
     <script src="{% static "js/sweet-alert.min.js" %}"></script>
     <script src="{% static "js/countUp.min.js" %}"></script>
