--- a/principal/templates/miscellaneous/footer.html
+++ b/principal/templates/miscellaneous/footer.html
@@ -9,6 +9,11 @@
 {#				</h4>#}
 				<br/>
                 <br/>
+				<h4>
+					<strong>BrainTravel</strong>
+				</h4>
+				<hr>
+				<p class="text-muted"><a href="/i18n/change_language?language=es">Español</a> | <a href="/i18n/change_language?language=en">English</a></p>
 				<p class="text-muted">Copyright &copy; BrainTravel 2015</p>
 				<img src="{% static "img/powered_fs.png" %}" alt="BrainTravel is powered by Foursquare"/>
 			</div>
