--- a/principal/templates/miscellaneous/menu.html
+++ b/principal/templates/miscellaneous/menu.html
@@ -1,13 +1,12 @@
-<div class="navbar navbar-default navbar-static-top navbar-bt-gen" role="navigation">
-    <div class="container">
-        <div class="navbar-header">
+{% load i18n %}
+<div class="navbar navbar-default .navbar-toggle navbar-bt-gen navbar-static-top" role="navigation">
+    <div class="container bg-menu-collapse">        <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/"><strong>BrainTravel</strong></a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
