Añadida etiquetas de internacionalizacion que faltaban a crear plan

--- a/principal/templates/plan_creation.html
+++ b/principal/templates/plan_creation.html
@@ -90,8 +90,8 @@
 				</div>
 				<!--/col-->
 				<div class="col-xs-12 col-sm-6 col-md-6">
-					<h2>Price: <span id="tripPrice">?</span> Coins</h2>
-					<h2>My Coins: <span id="myCoins">{{traveller.coins}}</span> Coins</h2>
+					<h2>{% trans "Price" %} <span id="tripPrice">?</span> {% trans "Coins" %}</h2>
+					<h2>{% trans "My coins" %}: <span id="myCoins">{{traveller.coins}}</span> {% trans "Coins" %}</h2>
 				</div>
 			</div>
         </div>
