--- a/principal/templates/plan_creation.html
+++ b/principal/templates/plan_creation.html
@@ -50,8 +50,8 @@
 											{{ hidden }}
 										{% endfor %}
 
-										<div class="form-group {% if form.visible_fields.1.errors %} has-error {% endif %} ">
-											<label for="id_{{ form.visible_fields.1.html_name }}"
+										<div class="form-group {% if form.visible_fields..errors %} has-error {% endif %} ">
+											<label for="id_{{ form.visible_fields.3.html_name }}"
 												   class="control-label">{% trans "Days" %}</label>
 											<input class="form-control" id="id_days" name="days" type="number" min="1" max="7"
 												   value="{% if form.initial|length != 0 %}{{ form.initial.days }}{% else %}{{ form.data.days }}{% endif %}"
