Bug con el diseño y reorganizacion - Se ha agregado de nuevo el logo a la barra de navegacion - Se ha eliminado el time de custom.css y se a puesto en timeline.css

--- a/principal/templates/miscellaneous/menu.html
+++ b/principal/templates/miscellaneous/menu.html
@@ -1,12 +1,14 @@
 {% load i18n %}
 <div class="navbar navbar-default .navbar-toggle navbar-bt-gen navbar-static-top" role="navigation">
-    <div class="container bg-menu-collapse">        <div class="navbar-header">
+    <div class="container bg-menu-collapse">
+        <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
+            <a class="navbar-brand" href="/">BrainTravel</a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
