HTML con la clase "container" Todos los html tiene la clase container

--- a/principal/templates/buy_coins.html
+++ b/principal/templates/buy_coins.html
@@ -1,6 +1,7 @@
-{% extends 'base.html' %} {% block title %} Trip list {% endblock %} 
+{% extends 'base.html' %}
+{% block title %} Buy coins {% endblock %}
 {% block content %}
-
+<div class="container">
 <h1>Paquetes de monedas</h1>
 
 <p>Con nuestras monedas virtuales podras organizar tus viajes
@@ -33,5 +34,6 @@
 			</div>
 		</div>
 	</div>
+</div>
 </div>
 {%endblock%}
