--- a/principal/templates/profile_edit_password.html
+++ b/principal/templates/profile_edit_password.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% block title %} Edit Password {% endblock %}
 {% block content %}
+<div class="container">
 <div class="row">
     <div class="col-xs-12 .col-sm-6 .col-md-8">
         <div class="well panel panel-default">
@@ -53,4 +54,5 @@
     <!--/col-->
 </div>
 <!--/row-->
+</div>
 {%endblock%}
