--- a/principal/templates/public_trip_details.html
+++ b/principal/templates/public_trip_details.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
-{% block title %} Search {% endblock %}
+{% block title %} Details {% endblock %}
 {% block content %}
+<div class="container">
 <div class="row">
     <div class="col-xs-12">
         <h1>{{trip.name}}</h1>
@@ -221,5 +222,6 @@
             {% endif %}
         </div>
     </div>
+</div>
 </div>
 {% endblock %}
