--- a/principal/templates/search.html
+++ b/principal/templates/search.html
@@ -36,9 +36,9 @@
                                 <ul class="list-inline list-unstyled">
                                 <li><span> {{trip.comment_set.all.count}} <i class="fa fa-comments"></i></span></li>
                                 <li>|</li>
-                                <li><a href="#" style="text-decoration: None;"><i class="fa fa-thumbs-o-up"></i> {{trip.likes}}</a></li>
+                                <li><i class="fa fa-thumbs-o-up"></i> {{trip.likes}}</li>
                                 <li>|</li>
-                                <li><a href="#" style="text-decoration: None;"><i class="fa fa-thumbs-o-down"></i> {{trip.dislikes}}</a></li>
+                                <li><i class="fa fa-thumbs-o-down"></i> {{trip.dislikes}}</li>
                                 <li>|</li>
                                 <li><a href="/public_trip_details/{{trip.scorable_ptr_id}}" style="text-decoration: None;"><i class="fa fa-info-circle"></i> View more</a></li>
                             </ul>
