--- a/principal/templates/list_coin_history.html
+++ b/principal/templates/list_coin_history.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% block title %} History coin {% endblock %}
 {% block content %}
+<div class="container">
     {% load i18n %}
 
     <h2>{% trans "List of my coin history" %}</h2>
@@ -27,4 +28,5 @@
         {% endfor %}
         </tbody>
     </table>
+</div>
 {% endblock %}
