--- a/principal/templates/trip_list.html
+++ b/principal/templates/trip_list.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% block title %} Trip list {% endblock %}
 {% block content %}
+    <div class="container">
     {% load i18n %}
     <a class="btn btn-default btn-lg" href="/trip/create/"> {% trans "Create Trip" %}</a>
     {% if not trips %}<p>{% trans "We couldn't find anything..." %}</p>{% endif %}
@@ -49,4 +50,5 @@
             {% endif %}
         </span>
     </div>
+</div>
 {%endblock%}
